Fix ConcurrentModificationException in client-registration policy reads
The client-registration policies read their configuration with
ComponentModel.getConfig().getList(key), which lazily inserts the key
when it is absent. The ComponentModel is cached and shared across request
threads, so concurrent dynamic client registrations structurally modify
the same HashMap and one throws ConcurrentModificationException.

Read the config the same non-mutating way as the rest of the codebase,
getConfig().getOrDefault(key, emptyList()), which keeps the empty-on-absent
contract getList provided and removes the mutation. Applied to the
TrustedHost, ClientScopes, ProtocolMappers and WebOrigins policies.

Closes #50286

Signed-off-by: Michael Stingl <mail@michaelstingl.com>
Signed-off-by: Alexander Schwartz <alexander.schwartz@ibm.com>
Co-authored-by: Alexander Schwartz <alexander.schwartz@ibm.com>